// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfigProvider componentConfig.Alert default 1`] = `
<div
  class="arco-alert arco-alert-info"
  role="alert"
>
  <div
    class="arco-alert-icon-wrapper"
  >
    <svg
      aria-hidden="true"
      class="arco-icon arco-icon-info-circle-fill"
      fill="none"
      focusable="false"
      stroke="currentColor"
      stroke-width="4"
      viewBox="0 0 48 48"
    >
      <path
        clip-rule="evenodd"
        d="M24 44c11.046 0 20-8.954 20-20S35.046 4 24 4 4 12.954 4 24s8.954 20 20 20Zm2-30a1 1 0 0 0-1-1h-2a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1v-2Zm0 17h1a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1h-6a1 1 0 0 1-1-1v-2a1 1 0 0 1 1-1h1v-8a1 1 0 0 1-1-1v-2a1 1 0 0 1 1-1h3a1 1 0 0 1 1 1v11Z"
        fill="currentColor"
        fill-rule="evenodd"
        stroke="none"
      />
    </svg>
  </div>
  <div
    class="arco-alert-content-wrapper"
  />
</div>
`;

exports[`ConfigProvider componentConfig.Alert set className globally 1`] = `
<div
  class="arco-alert arco-alert-info global-default-class"
  role="alert"
>
  <div
    class="arco-alert-icon-wrapper"
  >
    <svg
      aria-hidden="true"
      class="arco-icon arco-icon-info-circle-fill"
      fill="none"
      focusable="false"
      stroke="currentColor"
      stroke-width="4"
      viewBox="0 0 48 48"
    >
      <path
        clip-rule="evenodd"
        d="M24 44c11.046 0 20-8.954 20-20S35.046 4 24 4 4 12.954 4 24s8.954 20 20 20Zm2-30a1 1 0 0 0-1-1h-2a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1v-2Zm0 17h1a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1h-6a1 1 0 0 1-1-1v-2a1 1 0 0 1 1-1h1v-8a1 1 0 0 1-1-1v-2a1 1 0 0 1 1-1h3a1 1 0 0 1 1 1v11Z"
        fill="currentColor"
        fill-rule="evenodd"
        stroke="none"
      />
    </svg>
  </div>
  <div
    class="arco-alert-content-wrapper"
  />
</div>
`;

exports[`ConfigProvider componentConfig.Alert set className globally and component set className itself. 1`] = `
<div
  class="arco-alert arco-alert-info component-class"
  role="alert"
>
  <div
    class="arco-alert-icon-wrapper"
  >
    <svg
      aria-hidden="true"
      class="arco-icon arco-icon-info-circle-fill"
      fill="none"
      focusable="false"
      stroke="currentColor"
      stroke-width="4"
      viewBox="0 0 48 48"
    >
      <path
        clip-rule="evenodd"
        d="M24 44c11.046 0 20-8.954 20-20S35.046 4 24 4 4 12.954 4 24s8.954 20 20 20Zm2-30a1 1 0 0 0-1-1h-2a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1v-2Zm0 17h1a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1h-6a1 1 0 0 1-1-1v-2a1 1 0 0 1 1-1h1v-8a1 1 0 0 1-1-1v-2a1 1 0 0 1 1-1h3a1 1 0 0 1 1 1v11Z"
        fill="currentColor"
        fill-rule="evenodd"
        stroke="none"
      />
    </svg>
  </div>
  <div
    class="arco-alert-content-wrapper"
  />
</div>
`;

exports[`ConfigProvider componentConfig.Alert set data-* property 1`] = `
<div
  class="arco-alert arco-alert-info"
  data-test-name="Alert"
  role="alert"
>
  <div
    class="arco-alert-icon-wrapper"
  >
    <svg
      aria-hidden="true"
      class="arco-icon arco-icon-info-circle-fill"
      fill="none"
      focusable="false"
      stroke="currentColor"
      stroke-width="4"
      viewBox="0 0 48 48"
    >
      <path
        clip-rule="evenodd"
        d="M24 44c11.046 0 20-8.954 20-20S35.046 4 24 4 4 12.954 4 24s8.954 20 20 20Zm2-30a1 1 0 0 0-1-1h-2a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1v-2Zm0 17h1a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1h-6a1 1 0 0 1-1-1v-2a1 1 0 0 1 1-1h1v-8a1 1 0 0 1-1-1v-2a1 1 0 0 1 1-1h3a1 1 0 0 1 1 1v11Z"
        fill="currentColor"
        fill-rule="evenodd"
        stroke="none"
      />
    </svg>
  </div>
  <div
    class="arco-alert-content-wrapper"
  />
</div>
`;
